name:                hurricane
version:             0.0.1
synopsis:            Physics engine
description:         Physics engine based on Yampa FRP and cyclone physics engine
homepage:            http://github.com/ncrashed/hurricane
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha (NCrashed)
maintainer:          NCrashed@gmail.com          
category:            Game
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:       base ==4.6.*